--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <a target="_blank" href="https://icons8.com/icon/fDrTajPYuKKM/m">M</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link type="image/png" sizes="16x16" rel="icon" href="./icons8-m-16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
